--- a/homepage.css
+++ b/homepage.css
@@ -4,7 +4,7 @@
 
 .bg-1 { 
 	padding-top: 12em;
-	padding-bottom: 14.75em;
+	padding-bottom: 12em;
 	color: #ffffff;
 	font-family: 'Open Sans', sans-serif;
 	-webkit-background-size: cover;
@@ -45,4 +45,13 @@
 	margin-left: 20px;
 	padding-left: 2em !important;
 	padding-right: 2em !important;
+}
+
+.footer-background {
+	background-color: #343a40;
+	color: white;
+}
+
+i {
+	color: white;
 }
