--- a/homepage.css
+++ b/homepage.css
@@ -56,6 +56,13 @@
     }
 }
 
+@media only screen and (max-width: 550px) {
+	.bottom-button-space {
+		margin-top: 0.5em;
+		margin-bottom: 0.5em;
+	}
+}
+
 .footer-background {
 	background-color: #343a40;
 	color: white;
