--- a/homepage.css
+++ b/homepage.css
@@ -74,6 +74,10 @@
         margin-top: 1em;
         margin-bottom: 1em;
     }
+    .card {
+    	margin-top: 0.5em;
+    	margin-bottom: 0.5em;
+    }
 }
 
 @media only screen and (max-width: 550px) {
