Added box shadow and background

--- a/homepage.css
+++ b/homepage.css
@@ -29,6 +29,11 @@
 	padding-bottom: 2em;
 }
 
+.row {
+	background-color: #ecf0f1;
+	padding-top: 2em;
+}
+
 .bg-4 {
 	padding-top: 2em;
 	padding-bottom: 2em;
