Updated for mobile browsers

--- a/homepage.css
+++ b/homepage.css
@@ -78,6 +78,9 @@
     	margin-top: 0.5em;
     	margin-bottom: 0.5em;
     }
+    .section-header {
+    	font-size: 45px;
+    }
 }
 
 @media only screen and (max-width: 550px) {
