--- a/project_template.css
+++ b/project_template.css
@@ -82,6 +82,9 @@
 		padding-left: 0em;
 		padding-right: 0em;
 	}
+	.w-75 {
+		width: 100% !important;
+	}
 }
 
 @media only screen and (max-width: 550px) {
