--- a/css/homepage.css
+++ b/css/homepage.css
@@ -2,6 +2,16 @@
 	color: white !important;
 }
 
+#particles-js {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -10;
+    top: 0;
+    left: 0;
+    background: #141a20;
+}
+
 .bg-1 { 
 	padding-top: 12em;
 	padding-bottom: 13em;
@@ -12,27 +22,26 @@
 	-o-background-size: cover;
 	background-size: cover;
 	background-repeat:no-repeat;
-	background: -webkit-linear-gradient(#ff6a00, #ee0979);
-	background: -moz-linear-gradient(#ff6a00, #ee0979);
-	background: -ms-linear-gradient(#ff6a00, #ee0979);
-	background: -o-linear-gradient(#ff6a00, #ee0979);
-	background: linear-gradient(#ff6a00, #ee0979);
+	height: 100vh;
 }
 
 .bg-2 {
-	padding-top: 3em;
-	padding-bottom: 3em;
+	background: #343a40;
+	padding-top: 16vh;
+	padding-bottom: 16vh;
+	color: #fff;
 }
 
 .bg-3 {
+	background: #141a20;
 	padding-top: 2em;
-	padding-bottom: 2em;
 }
 
 .bg-4 {
+	background: #343a40;
 	padding-top: 2em;
 	padding-bottom: 2em;
-	background: #fff;
+	color: #fff;
 }
 
 .icon-padding {
@@ -77,6 +86,7 @@
 .section-header {
 	font-weight: lighter;
 	font-size: 50px;
+	margin-bottom: 5vh;
   	background: -webkit-linear-gradient(#ff6a00, #ee0979);
   	-webkit-background-clip: text;
   	-webkit-text-fill-color: transparent;
@@ -104,8 +114,9 @@
 }
 
 .footer-background {
-	background-color: #343a40;
+	background: #343a40;
 	color: white;
+	z-index: 10;
 }
 
 i {
@@ -128,4 +139,5 @@ i {
 .card {
 	margin-left: 1em;
 	margin-right: 1em;
+	color: #fff;
 }
