--- a/css/projects.css
+++ b/css/projects.css
@@ -2,6 +2,16 @@
 	color: white !important;
 }
 
+#particles-js {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -10;
+    top: 0;
+    left: 0;
+    background: #141a20;
+}
+
 .sides {
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -18,6 +28,7 @@
 .bg-3 {
 	padding-top: 6em;
 	padding-bottom: 4em;
+	background: #343a40;
 }
 
 
@@ -49,6 +60,7 @@
 	margin-left: 20px;
 	padding-left: 2em !important;
 	padding-right: 2em !important;
+	color: white;
 }
 
 .bottom-button-space {
@@ -80,7 +92,7 @@
     	font-size: 40px;
     }
     .projects-background {
-		background: #ecf0f1;
+		background: #545a60;
 		padding-left: 0em;
 		padding-right: 0em;
 	}
@@ -119,10 +131,11 @@ i {
 .card {
 	margin-left: 1em;
 	margin-right: 1em;
+	color: #fff;
 }
 
 .projects-background {
-	background: #ecf0f1;
+	background: #545a60;
 	padding-left: 5em;
 	padding-right: 5em;
 }
