--- a/css/project_template.css
+++ b/css/project_template.css
@@ -2,6 +2,16 @@
 	color: white !important;
 }
 
+#particles-js {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -10;
+    top: 0;
+    left: 0;
+    background: #141a20;
+}
+
 .sides {
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
